Changelog for CmdArgs

0.10.18, released 2017-09-24
    #47, GHC 8.4 compatibility
0.10.17, released 2017-03-31
    Add processValueIO for more controlled error messages
    #529, don't include the stack trace in processValue
0.10.16, released 2017-03-22
    Minor improvement to error messages
0.10.15, released 2017-03-06
    #43, GHC 8.2 compatibility
0.10.14, released 2016-02-16
    #39, ensure correct line breaks in HTML help output
    #18, preserve manual \n in help messages
    #25, reformat the README
0.10.13, released 2015-05-22
    #24, support Ratio in some places
0.10.12, released 2014-10-27
    GHC 7.2 compatibility
0.10.11, released 2014-10-12
    #15, never put [brackets] around optional args in Explicit
0.10.10, released 2014-09-18
    #14, fix @ file arguments
0.10.9, released 2014-07-22
    #10, fix versionArgs (broken in 0.10.8)
0.10.8, released 2014-07-21
    Avoid compilation warnings on GHC 7.8
    #9, add --numeric-version flag
    Update the copyright year
    Change GetOpt.usageInfo to be more like GetOpt
0.10.7, released 2013-12-09
    #1, fix timestamps in .tar.gz dist file
0.10.6, released 2013-12-05
    #625, more documentation about args/argPos
    #626, ensure initial lists don't get reversed (fix after #610)
0.10.5, released 2013-07-29
    #615, support lists inside a newtype
0.10.4, released 2013-06-26
    #610, make sure it is O(n) to append arguments, not O(n^2)
0.10.3, released 2013-04-05
    Append list items under an enum
    Support &= ignore on enum fields
0.10.2, released 2013-02-28
    Relax upper bounds to be GHC 7.7 compatible
0.10.1, released 2012-11-17
    #569, set the test program to off by default
	Complete revamp of cmdargs-browser, far better Javascript
    Add a missing case for Helper marshalling FlagNone
0.10, released 2012-08-09
    Revert to 0.9.6, including modeExpandAt
0.9.7, released 2012-08-09
    Revert to 0.9.5, to fix up PVP breakage
0.9.6, released 2012-07-29